@@ -8,6 +8,7 @@
 	Must be enabled at compilation time via -DWITH_MULTI_ACCEPT=ON.
 	* flow: ruby-1.9 alike named parameter association.
 	* plugins: removed plugins proxy & fastcgi. Deprecated by director plugin.
+	* plugins: accesslog plugin now also supports syslog target
 
 0.6.0 (2013-02-27)
 
